--- a/frontend/src/pages/NewPostPage/NewPostPage.css
+++ b/frontend/src/pages/NewPostPage/NewPostPage.css
@@ -24,9 +24,9 @@
 }
 
 .header-title {
-  font-size: 1.9rem;
+  font-size: 1.6rem;
   font-weight: bold;
-  color: #21e437; /* LinguaMath green */
+  color: black; /* LinguaMath green */
   font-family: "Arial", sans-serif;
 }
 
