--- a/frontend/src/components/OpenAIChat/OpenAIChat.css
+++ b/frontend/src/components/OpenAIChat/OpenAIChat.css
@@ -2,7 +2,7 @@
    Container
 ========================= */
 .openai-chat-container {
-  height: 100vh;
+  min-height: 70vh;
   background-color: white;
   padding: 3rem 1rem 1rem 1rem;
   display: flex;
