--- a/frontend/src/pages/PostListPage/PostListPage.css
+++ b/frontend/src/pages/PostListPage/PostListPage.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   padding: 1rem;
-  height: calc(100vh - 2rem); /* leave space for header/footer */
+  min-height: calc(100vh - 2rem); /* leave space for header/footer */
   max-width: 95vw;
   margin: 0 auto;
 }
